--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -13,12 +13,12 @@
 \usepackage{subfig}
 \usepackage[noabbrev]{cleveref} % permet d'utiliser cref and Cref
 
-\usepackage{setspace}
-\doublespacing
+%\usepackage{setspace}
+%\doublespacing
 
-\setlength {\textwidth}{16cm}
-\setlength {\textheight}{21cm}
-\setlength {\oddsidemargin}{0cm}
+\setlength{\textwidth}{16.6cm}
+\setlength{\textheight}{21cm}
+\setlength{\oddsidemargin}{0cm}
 \setlength{\headsep}{5pt} 
 
 \newcommand\bn{\boldsymbol{\nabla}}
