--- a/mip.tex
+++ b/mip.tex
@@ -49,6 +49,7 @@ the cell correspond to the first (respectively second) basis function of the
   \includegraphics[width=0.3\textwidth]{mass_matrix}
   \caption{Sub-cell in the cell}
 \end{figure}
+Now, $\bs{M}_{PWLD}$ can be filled in using $\bs{M}_S$:
 {\allowdisplaybreaks
 \begin{align}
   & \bs{M}_{PWLD}(0,0) =  \bs{M}_S(0,0) + \alpha \bs{M}_S(0,2) + \alpha
