--- a/conclusions.tex
+++ b/conclusions.tex
@@ -9,6 +9,5 @@ the scattering is isotropic. On three different examples, we tested MIP on highl
 unstructured meshed composed of different types of cells. We noticed that the
 efficiency of MIP does not seem to be degraded on these meshes. We have also
 compared different preconditioners for CG to solve MIP. Algebraic multigrid
-methods were found to be the best preconditioner, AGMG being up to 20 times
-faster than CG without preconditioning which itself was faster than CG
-preconditioned by SSOR.
+methods were found to be the best preconditioner, AGMG being more than 20 times
+faster than CG without preconditioning.
