--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{array}
+\usepackage{xspace}
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{float} % utiliser H pour forcer a mettre l'image ou on veut
@@ -10,11 +11,12 @@
 \usepackage{marvosym} % permet d'avoir le symbol pour le nucleaire
 \usepackage{moreverb} % permet d'utiliser verbatimtab : conservation la tabulation
 \usepackage{stmaryrd} % permet d'utiliser \llbrackedt et \rrbracket : double crochet
-\usepackage{subfig}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage[noabbrev]{cleveref} % permet d'utiliser cref and Cref
 
-%\usepackage{setspace}
-%\doublespacing
+\usepackage{setspace}
+\doublespacing
 
 \setlength{\textwidth}{16.6cm}
 \setlength{\textheight}{21cm}
@@ -39,7 +41,71 @@
 \renewcommand{\[}{\left[}
 \renewcommand{\]}{\right]}
 
+\newcommand{\sn}{\ensuremath{S_n}\xspace}
+
 \newtheorem{algorithm}{Algorithm}[section]
+
+%
+% Vector forms
+%
+\renewcommand{\div}{\bn\! \cdot \!}
+\newcommand{\grad}{\bn}
+\newcommand{\oa}[1]{\fn{\frac{1}{3}\hat{\Omega}\!\cdot\!\overrightarrow{A_{#1}}}}
+%
+% Equation beginnings and endings
+%
+\newcommand{\bea}{\begin{eqnarray}}
+\newcommand{\eea}{\end{eqnarray}}
+\newcommand{\be}{\begin{equation}}
+\newcommand{\ee}{\end{equation}}
+\newcommand{\beas}{\begin{eqnarray*}}
+\newcommand{\eeas}{\end{eqnarray*}}
+\newcommand{\bdm}{\begin{displaymath}}
+\newcommand{\edm}{\end{displaymath}}
+%
+% List beginnings and endings
+% 
+\newcommand{\bl}{\bss\begin{itemize}}
+\newcommand{\el}{\vspace{-.5\baselineskip}\end{itemize}\ess}
+\newcommand{\benu}{\bss\begin{enumerate}}
+\newcommand{\eenu}{\vspace{-.5\baselineskip}\end{enumerate}\ess}
+%
+% Figure and table beginnings and endings
+% 
+\newcommand{\bfg}{\begin{figure}}
+\newcommand{\efg}{\end{figure}}
+\newcommand{\bt}{\begin{table}}
+\newcommand{\et}{\end{table}}
+%
+% More Quick Commands
+% 
+\newcommand{\bi}{\begin{itemize}}
+\newcommand{\ei}{\end{itemize}}
+\newcommand{\ben}{\begin{enumerate}}
+\newcommand{\een}{\end{enumerate}}
+% DGFEM commands
+\newcommand{\jmp}[1]{\llb #1 \rrb}                     % jump
+\newcommand{\mvl}[1]{\ldb #1 \rdb}             % mean value
+%
+\newcommand{\ud}{\,\mathrm{d}}
+
+% shortcut for domain notation
+\newcommand{\D}{\mathcal{D}}
+
+% shortcut for xuthus
+\newcommand{\psc}[1]{{\sc {#1}}}
+\newcommand{\xuthus}{\psc{xuthus}\xspace}
+
+% vector shortcuts
+\newcommand{\vo}{\bo}
+\newcommand{\vr}{\bs{r}}
+\newcommand{\vn}{\bs{n}}
+\newcommand{\vnk}{\vec{\mathbf{n}}}
+
+% extra space
+\newcommand{\qq}{\quad\quad}
+
+\newcommand{\tfn}{b}
 
 
 \begin{document}
@@ -50,22 +116,18 @@ Arbitrary Polygonal Meshes}
 \maketitle
 
 \input{abstract}
-
 \input{introduction}
-
+\input{transport}
 \input{mip}
-
 \input{algebraic_multigrid}
-
 \input{results}
-
 \input{conclusions}
-
-\input{appendix}
 
 % bibliography
 \bibliographystyle{unsrt}
 \bibliography{biblio}
+
+\input{appendix}
 
 \end{document}
 
