--- a/biblio.bib
+++ b/biblio.bib
@@ -489,14 +489,14 @@
 @Phdthesis{pwld_3d,
   title = {{The piecewise linear discontinuous finite element method applied
     to the RZ and XYZ transport equations}},
-  author ={Theresa S. Bailey},
+  author ={Teresa S. Bailey},
   school = {Texas A\&M University},
   year = {2008}
 }
 @Article{pwl_diffusion,
   title = {{A piecewise linear finite element discretization of the diffusion
     equation for arbitrary polyhedral grids}},
-  author = {Theresa S. Bailey and Marvin L. Adams and Brian Yang and Michael
+  author = {Teresa S. Bailey and Marvin L. Adams and Brian Yang and Michael
     R. Zika},
   journal = {Journal of Computational Physics},
   volume = {227},
@@ -929,4 +929,59 @@
   year = {1992},
   volume = {14},
   pages = {654}
+}
+@Misc{mstk,
+  title = {{MSTK/MeshTools}},
+  year = {2012},
+  url = {https://software.lanl.gov/MeshTools/trac}
+}
+@Misc{cgal,
+  title = {{CGAL Computational Geometry Algorithms Library}},
+  year = {2012},
+  url = {http://www.cgal.org}
+}
+@Article{wla_pwl,
+  title = {{Semi-Consistent Diffusion Synthetic Acceleration for Discontinuous
+    Discretizations of Transport Problems}},
+  author = {Anthony P. Barbu and Marvin L. Adams},
+  journal = {International Conference on Mathematics, Computational Methods
+    and Reactor Physics, Saratoga Springs, New York},
+  year = {2009},
+  month = {May 3-7},
+}
+@Article{pwbld,
+  title = {{A Piecewise Bi-Linear Discontinuous Finite Element Spatial
+    Discretization of the Sn Transport Equation}},
+  author = {Teresa S. Bailey and James S. Warsa and Jae H. Chang and Marvin L.
+    Adams},
+  journal = {International Conference on Mathematics and Computational Methods
+    Applied to Nuclear Science and Engineering, Rio de Janeiro, Brazil},
+  year = {2011},
+  month = {May 8-12}
+} 
+@Article{wla,
+  title = {{Diffusion Accelerated Discontinuous Finite Element Schemes for the
+    Sn Equations in Slab and X-Y Geometries}},
+  author = {T. A. Wareing and E. W. Larsen and M. L. Adams},
+  journal = {Proc. Int. Topl. Mtg. Adavances in Mathematics, Computations, and
+    Reactor Physics, Pittsburgh, Pennsylvania},
+  year = {1991},
+  month = {April 28 - May 2}
+}
+@Article{cfm_dfm,
+  title = {{A Continuous Finite Element-Based, Discontinuous Finite Element
+    Method for Sn Transport}},
+  author = {James S. Warsa},
+  journal = {Nuclear Science and Engineering},
+  year = {2008},
+  volume = {160},
+  pages = {385-400}
+}
+@Article{m4s,
+  title = {{Unconditionally Stable Diffusion-Synthetic Acceleration Methods for
+    Slab Geometry Discrete Ordinates Equations. Part I: Theory}},
+  author = {E. W. Larsen},
+  journal = {Nuclear Science and Engineering},
+  year = {1982},
+  volume = {82}
 }
